# calc_pi_montecarlo

./: .gitignore  CMakeLists.txt  argparse.c  argparse.h  aux.c  aux.h  kalman.c  kalman.h  main.c  main.h  pi_N_vs_logD.csv  pi_data.tgz  rng.c  rng.h
.ipynb_checkpoints/: pi_calc_estimator-checkpoint.ipynb
